# high-performance-face-recognition

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
docs/: NEW_DEVELOPER_GUIDE.md  preformance.md
include/hpfrec/: app.hpp  face_database.hpp  image_utils.hpp  main_frame.hpp
scripts/: build.sh
src/: app.cpp  face_database.cpp  image_utils.cpp  main_frame.cpp
